fix some trouble

--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
         <div>
             <button onclick="startGame()"> start </button>
             <button onclick="stopGame()"> stop </button>
+            <button onclick="resetGame()"> reset </button>
         </div> 
         
         <div>
@@ -33,10 +34,6 @@
             </canvas>
 
             <div class="container">
-                <button onclick="postPosition('up')"> Up </button>  
-                <button onclick="postPosition('down')"> Down </button>  
-                <button onclick="postPosition('left')"> Left </button>  
-                <button onclick="postPosition('right')"> Right </button> 
                 <button onclick="getAddTail()"> add tail </button> 
             </div> 
         </div> 
