--- a/web/index.html
+++ b/web/index.html
@@ -17,26 +17,39 @@
                 display: table-cell;
                 vertical-align: middle;
             }
+
+            .menu {
+                overflow: hidden;
+                border: 1px solid black;
+                padding: 5px;
+            }
+            .block-left {
+                float: left; 
+                border: 1px solid black;
+                height: 100%;
+                padding: 5px;
+            }
         </style>
     </head>
     <body>     
-        <div>
-            <button onclick="startGame()"> start </button>
-            <button onclick="stopGame()"> stop </button>
-            <button onclick="resetGame()"> reset </button>
-        </div> 
-        
-        <div>
-            <canvas id="myCanvas" 
-                width="640"
-                height="480"
-                style="border: 1px solid black;">
-            </canvas>
-
-            <div class="container">
-                <button onclick="getAddTail()"> add tail </button> 
-            </div> 
-        </div> 
+        <div class="menu">
+            <div class="block-left">
+                <canvas id="myCanvas" 
+                    width="640"
+                    height="480">
+                </canvas>      
+            </div>
+            <div class="block-left"> 
+                <div>     
+                    <button onclick="startGame()"> start </button>
+                    <button onclick="stopGame()"> stop </button>
+                    <button onclick="resetGame()"> reset </button>
+                    <div>
+                        <button onclick="getAddTail()"> add tail </button>
+                    </div> 
+                </div>
+            </div>
+        </div>
 
         <script src="main.js"></script>
     </body>
