--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
      
-        <title> hello </title>
+        <title> goworm </title>
     
         <style>
             html, body {
