--- a/web/index.html
+++ b/web/index.html
@@ -34,9 +34,7 @@
     <body>     
         <div class="menu">
             <div class="block-left">
-                <canvas id="myCanvas" 
-                    width="640"
-                    height="480">
+                <canvas id="myCanvas" width="640" height="480">
                 </canvas>      
             </div>
             <div class="block-left"> 
@@ -48,6 +46,6 @@
             </div>
         </div>
 
-        <script src="main.js"></script>
+        <script type="text/javascript" src="main.js" type="module"></script>
     </body>
 </html>
